--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/datetimepicker": "^8.4.5",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/netinfo": "^11.2.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
@@ -20,27 +20,29 @@
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "dotenv": "^17.2.3",
-    "expo": "~54.0.13",
+    "expo": "54.0.22",
     "expo-auth-session": "~7.0.8",
     "expo-document-picker": "^14.0.7",
+    "expo-font": "~14.0.9",
     "expo-status-bar": "~3.0.8",
-    "expo-web-browser": "~15.0.8",
+    "expo-web-browser": "~15.0.9",
     "firebase": "^10.14.1",
     "react": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-draggable-flatlist": "^4.0.3",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.11.4",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-signature-canvas": "^5.0.1",
-    "react-native-webview": "^13.16.0",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "babel-preset-expo": "^10.0.1"
+    "babel-preset-expo": "~54.0.0"
   },
   "private": true
 }
