--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "dotenv": "^17.2.3",
-    "expo": "54.0.23",
-    "expo-auth-session": "~7.0.8",
+    "expo": "~54.0.25",
+    "expo-auth-session": "~7.0.9",
     "expo-document-picker": "^14.0.7",
     "expo-font": "~14.0.9",
     "expo-status-bar": "~3.0.8",
