--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "dotenv": "^17.2.3",
-    "expo": "~54.0.25",
-    "expo-auth-session": "~7.0.9",
-    "expo-document-picker": "^14.0.7",
-    "expo-font": "~14.0.9",
-    "expo-status-bar": "~3.0.8",
-    "expo-web-browser": "~15.0.9",
+    "expo": "~54.0.27",
+    "expo-auth-session": "~7.0.10",
+    "expo-document-picker": "~14.0.8",
+    "expo-font": "~14.0.10",
+    "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
     "firebase": "^10.14.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
