--- a/eas.json
+++ b/eas.json
@@ -28,6 +28,17 @@
         "simulator": false
       }
     },
+    "screenshot": {
+      "distribution": "internal",
+      "env": {
+        "EXPO_NO_CACHE": "1",
+        "EXPO_IMAGE_UTILS_NO_CACHE": "1",
+        "EXPO_CACHE_DIR": "/tmp/expo-cache"
+      },
+      "ios": {
+        "simulator": true
+      }
+    },
     "production": {
       "env": {
         "EXPO_NO_CACHE": "1",
